
Major changes
 * We removed the central concept of mode (arp, dhcp or vlan). Now PacketFence
   can operate in multiple modes simultaneously. This new concept is called
   enforcement and is specified per interface in pf.conf.

Enhancements
 * pfcmd and web administration performance improvements by avoiding duplicate
   loading of some configuration files
 * Configuration simplification (#1182)

--------------------------------------------------------------------------------
Version <trunk-release> released on <releaseDate>

Compatibility notice
 * Removed support for Apache prior to version 2.2.0 (#828)
 * Removed support for jpgraph 1.x which bumps our depedencies to PHP 5

New features
 * Major update to the captive portal look and feel! More modern and 
   professional. Cleaner XHTML/CSS makes customization a lot easier than before.
   Also, all user-visible URLs are now clean and short (no more cgi-bin/... 
   clutter). (#980, #982)
 * Remediation pages are translatable (#822)

Enhancements
 * Externalized the jpgraph PHP library

--------------------------------------------------------------------------------
Version <version> released on <releaseDate>

Enhancements
 * New DHCP fingerprints for Polycom and Snom

Bug fixes
 * Fixed nessus scans don't work with bin/pfcmd as a setuid/setgid (#1087)
 * Fixed configurator.pl does not show interfaces without IP address (#1221)

--------------------------------------------------------------------------------
Version 2.2.1 released on 2011-06-16

New Hardware Support
 * AeroHIVE AP Access Points
 * Dlink DES 3550 switch (Thanks to Olivier Roch Vilato)
 * Dlink DGS 3200 switch
 * HP ProCurve 5400 Series
 * ExtremeNetworks Summit now supports MAC Authentication and 802.1X

New Features
 * Basic WISPR support improves iPod/iPhone/iPad usability (#815)

Enhancements
 * Performance improvement for RADIUS based requests in environments with large
   conf/switches.conf files