@@ -10,8 +10,8 @@ $TTL 3600
 )
 
        IN      NS      %%hostname%%.
-*.     IN      A       192.168.3.1
+*.     IN      A       %%A_blackhole%%
        IN      MX      5       %%hostname%%.
 
-1.3.168.192.in-addr.arpa.     IN      PTR       %%hostname%%
+%%PTR_blackhole%%     IN      PTR       %%hostname%%
 
