@@ -33,7 +33,8 @@ BEGIN {
     our ( @ISA, @EXPORT );
     @ISA = qw(Exporter);
     @EXPORT = qw(
-        valid_date valid_ip clean_ip clean_mac valid_mac get_decimal_oui_from_mac whitelisted_mac trappable_mac 
+        valid_date valid_ip reverse_ip clean_ip 
+        clean_mac valid_mac get_decimal_oui_from_mac whitelisted_mac trappable_mac 
         trappable_ip reggable_ip
         inrange_ip ip2gateway ip2interface ip2device isinternal pfmailer isenabled
         isdisabled getlocalmac ip2int int2ip 
@@ -96,6 +97,23 @@ sub valid_ip {
         return (0);
     } else {
         return (1);
+    }
+}
+
+=item reverse_ip
+
+Returns the IP in reverse notation. ex: 1.2.3.4 will return 4.3.2.1
+
+Used for DNS configuration templates.
+
+=cut
+sub reverse_ip {
+    my ($ip) = @_;
+
+    if ( $ip =~ /^(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})$/ ) {
+        return "$4.$3.$2.$1";
+    } else {
+        return;
     }
 }
 
