@@ -4,7 +4,7 @@ use strict;
 use warnings;
 use diagnostics;
 
-use Test::More tests => 51;
+use Test::More tests => 52;
 
 # pf core libs
 use lib '/usr/local/pf/lib';
@@ -44,6 +44,7 @@ BEGIN { use_ok('pf::SNMP::constants') }
 BEGIN { use_ok('pf::services') }
 BEGIN { use_ok('pf::services::apache') }
 BEGIN { use_ok('pf::services::dhcpd') }
+BEGIN { use_ok('pf::services::named') }
 BEGIN { use_ok('pf::switchlocation') }
 BEGIN { use_ok('pf::traplog') }
 BEGIN { use_ok('pf::trigger') }
