@@ -27,6 +27,8 @@ Enhancements
  * pfcmd and web administration performance improvements by avoiding duplicate
    loading of some configuration files
  * Configuration simplification (#1182)
+ * Named isolation and registration zones now automatically generated on startup
+   based on networks.conf's DNS entry (#1105)
 
 --------------------------------------------------------------------------------
 Version <trunk-release> released on <releaseDate>
